# git-extend

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs  url_parser.rs
src/commands/: desc.rs  get.rs  list.rs  mod.rs  new.rs
